--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start -c",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
@@ -21,7 +21,7 @@
     "react-native": "0.76.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "^3.16.3",
-    "react-native-safe-area-context": "^4.12.0",
+    "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "~4.0.0",
     "react-native-web": "~0.19.6",
     "tailwindcss": "^3.4.15"
